feat: remove RxJS
