# go/gen/http/openapi.json
@@ -1,1 +1,74 @@
-{"swagger":"2.0","info":{"title":"","version":"0.0.1"},"host":"localhost:80","consumes":["application/json","application/xml","application/gob"],"produces":["application/json","application/xml","application/gob"],"paths":{"/portfolio/summary":{"get":{"tags":["portfolio"],"summary":"getPortfolioSummary portfolio","operationId":"portfolio#getPortfolioSummary","responses":{"200":{"description":"OK response.","schema":{"$ref":"#/definitions/PortfolioSummary","required":["balance","currency","change_percent"]}}},"schemes":["http"]}},"/portfolio/summary/watch":{"get":{"tags":["portfolio"],"summary":"watchPortfolioSummary portfolio","operationId":"portfolio#watchPortfolioSummary","responses":{"101":{"description":"Switching Protocols response.","schema":{"$ref":"#/definitions/PortfolioSummary","required":["balance","currency","change_percent"]}}},"schemes":["ws"]}}},"definitions":{"PortfolioSummary":{"title":"PortfolioSummary","type":"object","properties":{"balance":{"type":"number","description":"Total Balance","example":0.48762896212116436,"format":"double"},"change_percent":{"type":"number","description":"Change Percentage","example":0.03770770812643,"format":"double"},"currency":{"type":"string","description":"Currency Code","example":"Debitis impedit."}},"example":{"balance":0.47723201288775363,"change_percent":0.2604217807206088,"currency":"Quia ratione aliquam consectetur sunt amet non."},"required":["balance","currency","change_percent"]}}}
+{
+  "swagger": "2.0",
+  "info": { "title": "", "version": "0.0.1" },
+  "host": "localhost:80",
+  "consumes": ["application/json", "application/xml", "application/gob"],
+  "produces": ["application/json", "application/xml", "application/gob"],
+  "paths": {
+    "/portfolio/summary": {
+      "get": {
+        "tags": ["portfolio"],
+        "summary": "getPortfolioSummary portfolio",
+        "operationId": "portfolio#getPortfolioSummary",
+        "responses": {
+          "200": {
+            "description": "OK response.",
+            "schema": {
+              "$ref": "#/definitions/PortfolioSummary",
+              "required": ["balance", "currency", "change_percent"]
+            }
+          }
+        },
+        "schemes": ["http"]
+      }
+    },
+    "/portfolio/summary/watch": {
+      "get": {
+        "tags": ["portfolio"],
+        "summary": "watchPortfolioSummary portfolio",
+        "operationId": "portfolio#watchPortfolioSummary",
+        "responses": {
+          "101": {
+            "description": "Switching Protocols response.",
+            "schema": {
+              "$ref": "#/definitions/PortfolioSummary",
+              "required": ["balance", "currency", "change_percent"]
+            }
+          }
+        },
+        "schemes": ["ws"]
+      }
+    }
+  },
+  "definitions": {
+    "PortfolioSummary": {
+      "title": "PortfolioSummary",
+      "type": "object",
+      "properties": {
+        "balance": {
+          "type": "number",
+          "description": "Total Balance",
+          "example": 0.48762896212116436,
+          "format": "double"
+        },
+        "change_percent": {
+          "type": "number",
+          "description": "Change Percentage",
+          "example": 0.03770770812643,
+          "format": "double"
+        },
+        "currency": {
+          "type": "string",
+          "description": "Currency Code",
+          "example": "Debitis impedit."
+        }
+      },
+      "example": {
+        "balance": 0.47723201288775363,
+        "change_percent": 0.2604217807206088,
+        "currency": "Quia ratione aliquam consectetur sunt amet non."
+      },
+      "required": ["balance", "currency", "change_percent"]
+    }
+  }
+}
