# go/goa_gen/gen/http/portfolio/server/websocket.go
@@ -1,101 +1,0 @@
-// Code generated by goa v3.24.2, DO NOT EDIT.
-//
-// portfolio WebSocket server streaming
-//
-// Command:
-// $ goa gen github.com/reidlai/ta-workspace/modules/portfolio/go/design
-// --output goa_gen
-
-package server
-
-import (
-	"context"
-	"net/http"
-	"sync"
-	"time"
-
-	"github.com/gorilla/websocket"
-	portfolio "github.com/reidlai/ta-workspace/modules/portfolio/go/goa_gen/gen/portfolio"
-	goahttp "goa.design/goa/v3/http"
-)
-
-// ConnConfigurer holds the websocket connection configurer functions for the
-// streaming endpoints in "portfolio" service.
-type ConnConfigurer struct {
-	WatchPortfolioSummaryFn goahttp.ConnConfigureFunc
-}
-
-// WatchPortfolioSummaryServerStream implements the
-// portfolio.WatchPortfolioSummaryServerStream interface.
-type WatchPortfolioSummaryServerStream struct {
-	once sync.Once
-	// upgrader is the websocket connection upgrader.
-	upgrader goahttp.Upgrader
-	// configurer is the websocket connection configurer.
-	configurer goahttp.ConnConfigureFunc
-	// cancel is the context cancellation function which cancels the request
-	// context when invoked.
-	cancel context.CancelFunc
-	// w is the HTTP response writer used in upgrading the connection.
-	w http.ResponseWriter
-	// r is the HTTP request.
-	r *http.Request
-	// conn is the underlying websocket connection.
-	conn *websocket.Conn
-}
-
-// NewConnConfigurer initializes the websocket connection configurer function
-// with fn for all the streaming endpoints in "portfolio" service.
-func NewConnConfigurer(fn goahttp.ConnConfigureFunc) *ConnConfigurer {
-	return &ConnConfigurer{
-		WatchPortfolioSummaryFn: fn,
-	}
-}
-
-// Send streams instances of "portfolio.PortfolioSummary" to the
-// "watchPortfolioSummary" endpoint websocket connection.
-func (s *WatchPortfolioSummaryServerStream) Send(v *portfolio.PortfolioSummary) error {
-	var err error
-	// Upgrade the HTTP connection to a websocket connection only once. Connection
-	// upgrade is done here so that authorization logic in the endpoint is executed
-	// before calling the actual service method which may call Send().
-	s.once.Do(func() {
-		var conn *websocket.Conn
-		conn, err = s.upgrader.Upgrade(s.w, s.r, nil)
-		if err != nil {
-			return
-		}
-		if s.configurer != nil {
-			conn = s.configurer(conn, s.cancel)
-		}
-		s.conn = conn
-	})
-	if err != nil {
-		return err
-	}
-	res := v
-	body := NewWatchPortfolioSummaryResponseBody(res)
-	return s.conn.WriteJSON(body)
-}
-
-// SendWithContext streams instances of "portfolio.PortfolioSummary" to the
-// "watchPortfolioSummary" endpoint websocket connection with context.
-func (s *WatchPortfolioSummaryServerStream) SendWithContext(ctx context.Context, v *portfolio.PortfolioSummary) error {
-	return s.Send(v)
-}
-
-// Close closes the "watchPortfolioSummary" endpoint websocket connection.
-func (s *WatchPortfolioSummaryServerStream) Close() error {
-	var err error
-	if s.conn == nil {
-		return nil
-	}
-	if err = s.conn.WriteControl(
-		websocket.CloseMessage,
-		websocket.FormatCloseMessage(websocket.CloseNormalClosure, "server closing connection"),
-		time.Now().Add(time.Second),
-	); err != nil {
-		return err
-	}
-	return s.conn.Close()
-}
